Verif/Test/Invalide/test_erreur_3.70-3.deca
// Description:
//    Programme soulevant l'erreur (3.70)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'String' sont incompatibles avec l'opérateur binaire '+' (règle 3.70)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

int i;
{
   i = 1 + "a";
}